--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,48 +7,8 @@
             <div class="row">
                 <div class="col-xl-10 col-lg-12 ml-auto mr-auto">
                     <div class="job-search-content text-center">
-                        <h4>One million success stories</h4>
-                        <h2>find job our website</h2>
-                        <form action="#" method="post">
-                            <div class="form-container">
-                                <div class="box-select">
-                                    <div class="select">
-                                        <select name="category">
-                                            <option>Keywords</option>
-                                            <option>Finance</option>
-                                            <option>Accountant</option>
-                                            <option>Enginner</option>
-                                            <option>Programmer</option>
-                                            <option>Developer</option>
-                                        </select>
-                                    </div>
-                                    <div class="select">
-                                        <select name="date">
-                                            <option>All Regions</option>
-                                            <option>Dhaka</option>
-                                            <option>Shylet</option>
-                                            <option>Khulna</option>
-                                            <option>Barishal</option>
-                                            <option>Chittagong</option>
-                                        </select>
-                                    </div>
-                                    <div class="select">
-                                        <select name="date">
-                                            <option>Category</option>
-                                            <option>Web Design</option>
-                                            <option>Designing</option>
-                                            <option>Development</option>
-                                            <option>Programming</option>
-                                            <option>Developing</option>
-                                        </select>
-                                    </div>
-                                    <div class="select">
-                                        <button type="button">Search</button>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </form>
+                        <h4>Find your desire one in a minute</h4>
+                        <h2>Skills Farm...</h2>
                     </div>
                 </div>
             </div>
@@ -654,82 +614,6 @@
             </div>
         </div>
     </div>
-    <!--Start of Login Form-->
-    <div id="quickview-login">
-        <!-- Modal -->
-        <div class="modal fade" id="productModal" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">
-                                <i class="zmdi zmdi-close"></i></span></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-pop-up-content ptb-60 pl-60 pr-60">
-                            <div class="area-title text-center mb-43">
-                                <img src="/images/logo.png" alt="jobhere">
-                            </div>
-                            <form method="post" action="#">
-                                <div class="form-box">
-                                    <input type="text" name="username" placeholder="Email" class="mb-14">
-                                    <input type="password" name="pass" placeholder="Password">
-                                </div>
-                                <div class="fix ptb-30">
-                                    <span class="remember pull-left"><input class="p-0 pull-left" type="checkbox">Remember Me</span>
-                                    <span class="pull-right">
-                                        <a href="#">Forget Password?</a>
-                                    </span>
-                                </div>
-                                <div class="text-center">
-                                    <button type="submit" class="text-uppercase">Login</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End of Login Form-->
-    <!--Start of Login Form-->
-    <div id="quickview-register">
-        <!-- Modal -->
-        <div class="modal fade" id="register" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">
-                                <i class="zmdi zmdi-close"></i></span></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-pop-up-content ptb-60 pl-60 pr-60">
-                            <div class="area-title text-center mb-43">
-                                <img src="/images/logo.png" alt="jobhere">
-                            </div>
-                            <form method="post" action="#">
-                                <div class="form-box box2">
-                                    <input type="text" name="firstname" placeholder="First Name" class="mb-14">
-                                    <input type="text" name="lastname" placeholder="Last Name">
-                                </div>
-                                <div class="form-box">
-                                    <input type="email" name="emailnew" placeholder="Email" class="mb-14">
-                                    <input type="password" name="pass" placeholder="Password">
-                                </div>
-                                <div class="fix ptb-30">
-                                    <span class="remember pull-left"><input class="p-0 pull-left" type="checkbox">Remember Me</span>
-                                </div>
-                                <div class="text-center">
-                                    <button type="submit" class="text-uppercase">Submit</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End of Login Form-->
-
+    {% include "login.html.twig" %}
+    {% include "register.html.twig" %}
 {% endblock %}
