--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -1,7 +1,7 @@
 <!--Start of Login Form-->
 <div id="quickview-login">
     <!-- Modal -->
-    {% if error %}
+    {% if error is defined %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
     <div class="modal fade" id="productModal" tabindex="-1" role="dialog">
@@ -19,7 +19,7 @@
                         </div>
                         <form action="{{ path('_home') }}" method="post">
                             <div class="form-box">
-                                <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+                                <input type="text" id="username" name="_username" value="{% if last_username is defined %}last_username{% endif %}"/>
                                 <input type="password" id="password" name="_password"/>
                             </div>
                             <div class="fix ptb-30">
