--- a/templates/jobseeker/index.html.twig
+++ b/templates/jobseeker/index.html.twig
@@ -36,7 +36,7 @@
                 <!-- Tab panes -->
                 <div class="tab-content">
                     <div class="tab-pane active" id="profile">
-                        <div class="single-job-post-area ptb-130 ptb-sm-60" style="padding-top: 67px;">
+                        <div class="single-job-post-area ptb-130 ptb-sm-60" style="padding-top: 67px;padding-bottom: 67px;">
                             <div class="container">
                                 <div class="row">
                                     <div class="col-md-12">
