changes in the UI

--- a/templates/jobseeker/index.html.twig
+++ b/templates/jobseeker/index.html.twig
@@ -58,7 +58,7 @@
                                                             </p>
                                                             <p>Member Since : {{ app.user.createdat|date("Y") }}</p>
                                                         </div>
-                                                        <div class="button-box"><a href="#" class="button button-black">Edit</a>
+                                                        <div class="button-box"><a href="{{ path('_jobseeker_profile_edit') }}" class="button button-black">Edit</a>
                                                         </div>
                                                     </div>
                                                 </div>
