--- a/templates/jobseeker/editProfile.html.twig
+++ b/templates/jobseeker/editProfile.html.twig
@@ -7,14 +7,13 @@
             <h4>{{ type }}</h4>
             <div class="single-info mb-14">
                 <div class="form-box fix">
-                    <input type="text" id="{{ type }}_name" name="{{ type }}_name"
-                           placeholder="Please enter your school name">
+                    <input type="text" id="{{ type }}_name" name="{{ type }}_name" placeholder="Please enter your school name">
                 </div>
                 <div class="form-box">
-                    <input type="text" id="{{ type }}_percentage" name="{{ type }}_percentage"
-                           placeholder="Enter your percentage" style="width: 50%;">
+                    <input type="text" id="{{ type }}_percentage" name="{{ type }}_percentage" placeholder="Enter your percentage" style="width: 50%;">
                     <select name="{{ type }}_passoutyear" id="{{ type }}_passoutyear" style="width: 50%;">
-                        <option disabled selected value="default"> -- select an option --</option>
+                        <option disabled="disabled" selected="selected" value="default">
+                            -- select an option --</option>
                         <option value="1990">1990</option>
                         <option value="1991">1991</option>
                         <option value="1992">1992</option>
@@ -61,7 +60,9 @@
                         <h2 class="text-center">Create Resume</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
-                                <li><a href="index.html">Home</a></li>
+                                <li>
+                                    <a href="index.html">Home</a>
+                                </li>
                                 <li>Resume</li>
                             </ul>
                         </div>
@@ -78,14 +79,16 @@
                 <div class="col-lg-8 mr-auto ml-auto">
                     {{ form_start(form) }}
                     <div class="single-job-content">
-                        <div class="title"><span>Profile</span></div>
+                        <div class="title">
+                            <span>Profile</span></div>
                         <div class="single-job-form">
                             <div class="single-info mb-14 fix">
                                 <label class="uppercase pull-left m-0">photo</label>
                                 <div class="uploader fix pull-left fileupload">
                                     <input id="fileupload" name="fileupload" type="file">
                                     <span class="filename">Upload your photo</span>
-                                    <span class="action"><i class="zmdi zmdi-folder"></i>Browse</span>
+                                    <span class="action">
+                                        <i class="zmdi zmdi-folder"></i>Browse</span>
                                 </div>
                             </div>
                             <div class="single-info pb-14">
@@ -107,7 +110,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="title"><span>Contact Information</span></div>
+                        <div class="title">
+                            <span>Contact Information</span></div>
                         <div class="single-job-form">
                             <div class="single-info mb-14">
                                 <label for="country" class="uppercase pull-left m-0">country</label>
@@ -136,7 +140,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="title"><span>Biography</span></div>
+                        <div class="title">
+                            <span>Biography</span></div>
                         <div class="single-job-form">
                             <div class="single-info mb-14 fix">
                                 <label class="uppercase pull-left m-0">description</label>
@@ -145,50 +150,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="title"><span>Education</span></div>
+                        <div class="title">
+                            <span>Education</span></div>
                         {{ macroForm.education("School") }}
                         {{ macroForm.education("College") }}
                         {{ macroForm.education("University") }}
-                        <div class="title"><span>Experience</span></div>
-                        <div class="single-job-form mb-0">
-                            <div class="single-info pb-14">
-                                <label for="title" class="uppercase pull-left m-0">Job Title</label>
-                                <div class="form-box fix">
-                                    <input type="text" id="title" name="title" placeholder="Enter your title">
-                                </div>
-                            </div>
-                            <div class="single-info mb-14">
-                                <label for="date_from" class="uppercase pull-left m-0">date from</label>
-                                <div class="form-box fix">
-                                    <input type="text" id="date_from" name="date_from"
-                                           placeholder="Please enter date">
-                                </div>
-                            </div>
-                            <div class="single-info mb-14">
-                                <label for="date_to" class="uppercase pull-left m-0">date to</label>
-                                <div class="form-box fix">
-                                    <input type="text" id="date_to" name="date_to" placeholder="Please enter date">
-                                </div>
-                            </div>
-                            <div class="single-info fix">
-                                <label class="uppercase pull-left m-0">description </label>
-                                <div class="desc fix">
-                                        <textarea name="textarea" class="fix small textarea" cols="30" rows="10"
-                                                  placeholder="Please enter description"></textarea>
-                                    <div class="resubtn mt-40">
-                                        <a href="#" class="button button-medium-box">save resume</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
-                    </form>
-                </div>
+                    <input type="submit" value="Save"/>
+              {{ form_end(form) }}
             </div>
         </div>
     </div>
-    <!--End of Single Job Post Area-->
-    <!--Start of Footer Widget-area-->
-
-
+</div>
 {% endblock %}
