--- a/templates/jobseeker/editProfile.html.twig
+++ b/templates/jobseeker/editProfile.html.twig
@@ -1,63 +1,12 @@
 {% extends "base.html.twig" %}
 {% block title %}Skills Farm{% endblock %}
-{% import _self as macroForm %}
 {% block body %}
-    {% macro education(type) %}
-        <div class="single-job-form">
-            <h4>{{ type }}</h4>
-            <div class="single-info mb-14">
-                <div class="form-box fix">
-                    <input type="text" id="{{ type }}_name" name="{{ type }}_name" placeholder="Please enter your school name">
-                </div>
-                <div class="form-box">
-                    <input type="text" id="{{ type }}_percentage" name="{{ type }}_percentage" placeholder="Enter your percentage" style="width: 50%;">
-                    <select name="{{ type }}_passoutyear" id="{{ type }}_passoutyear" style="width: 50%;">
-                        <option disabled="disabled" selected="selected" value="default">
-                            -- select an option --</option>
-                        <option value="1990">1990</option>
-                        <option value="1991">1991</option>
-                        <option value="1992">1992</option>
-                        <option value="1993">1993</option>
-                        <option value="1994">1994</option>
-                        <option value="1995">1995</option>
-                        <option value="1996">1996</option>
-                        <option value="1997">1997</option>
-                        <option value="1998">1998</option>
-                        <option value="1999">1999</option>
-                        <option value="2000">2000</option>
-                        <option value="2001">2001</option>
-                        <option value="2002">2002</option>
-                        <option value="2003">2003</option>
-                        <option value="2004">2004</option>
-                        <option value="2005">2005</option>
-                        <option value="2006">2006</option>
-                        <option value="2007">2007</option>
-                        <option value="2008">2008</option>
-                        <option value="2009">2009</option>
-                        <option value="2010">2010</option>
-                        <option value="2011">2011</option>
-                        <option value="2012">2012</option>
-                        <option value="2013">2013</option>
-                        <option value="2014">2014</option>
-                        <option value="2015">2015</option>
-                        <option value="2016">2016</option>
-                        <option value="2017">2017</option>
-                        <option value="2018">2018</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <script>
-            document.getElementById('{{ type }}_passoutyear').value = '1992';
-        </script>
-    {% endmacro %}
-    <!--Breadcrumb Banner Area Start-->
     <div class="breadcrumb-banner-area pt-94 pb-85 bg-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="breadcrumb-text">
-                        <h2 class="text-center">Create Resume</h2>
+                        <h2 class="text-center">Create Profile</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
                                 <li>
@@ -80,7 +29,9 @@
                     {{ form_start(form) }}
                     <div class="single-job-content">
                         <div class="title">
-                            <span>Profile</span></div>
+                            <span>Profile</span>
+                            <a href="{{ path('_jobseeker_profile_edit_education')}}" style="float:right">Edit Education</a>
+                        </div>
                         <div class="single-job-form">
                             <div class="single-info mb-14 fix">
                                 <label class="uppercase pull-left m-0">photo</label>
@@ -103,10 +54,22 @@
                                     {{ form_widget(form.vc_secondname, { 'attr': {'placeholder': 'Second Name'} }) }}
                                 </div>
                             </div>
-                            <div class="single-info">
+                            <div class="single-info  pb-14">
                                 <label for="l_name" class="uppercase pull-left m-0">last name</label>
                                 <div class="form-box fix">
                                     {{ form_widget(form.vc_surname, { 'attr': {'placeholder': 'Sur Name'} }) }}
+                                </div>
+                            </div>
+                            <div class="single-info pb-14">
+                                <label for="l_name" class="uppercase m-0">gender</label>
+                                <div class="form-box">
+                                    {{ form_widget(form.bo_sex) }}
+                                </div>
+                            </div>
+                            <div class="single-info pb-14">
+                                <label class="uppercase pull-left m-0">DOB</label>
+                                <div style="float: left;">
+                                    {{ form_widget(form.dt_dob) }}
                                 </div>
                             </div>
                         </div>
@@ -114,9 +77,12 @@
                             <span>Contact Information</span></div>
                         <div class="single-job-form">
                             <div class="single-info mb-14">
-                                <label for="country" class="uppercase pull-left m-0">country</label>
+                                <label for="country" class="uppercase pull-left m-0">Location</label>
                                 <div class="form-box fix">
-                                    {{ form_widget(form.vc_location, { 'attr': {'placeholder': 'Enter You location'} }) }}
+                                    {{ form_widget(form.vc_location, {  'id':'location','attr': {'placeholder': 'Enter You location','onkeydown':'initMap(event)' } }) }}
+                                    {{ form_widget(form.db_latitude, {  'id':'latitude'}) }}
+                                    {{ form_widget(form.db_longitude, {  'id':'longitude'}) }}
+                                    {{ form_widget(form.vc_country, {  'id':'country'}) }}
                                 </div>
                             </div>
                             {{ form_widget(form.db_latitude) }}
@@ -150,16 +116,20 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="title">
-                            <span>Education</span></div>
-                        {{ macroForm.education("School") }}
-                        {{ macroForm.education("College") }}
-                        {{ macroForm.education("University") }}
+                        <div class="single-job-form">
+                            <div class="single-info mb-14">
+                                <label class="uppercase pull-left m-0">Subscription</label>
+                                <div class="desc">
+                                    {{ form_widget(form.bo_subscriptionletter) }}
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <input type="submit" value="Save"/>
-              {{ form_end(form) }}
+                    {{ form_end(form) }}
+                </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
