chages in images and employer

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -16,7 +16,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer-widget-area ptb-80 pb-sm-30">
+                <div class="footer-widget-area ptb-80 pb-sm-30" style="background-color:black">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-3 col-md-5">
