--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-sm-6 col-lg-3">
                 <div class="logo">
-                    <a href="/"><img src="/images/logo.png" style="width: 155px;height: 38px;" alt="JobHere"></a>
+                    <a href="/"><img src="/img/logo-extended.png" style="width: 155px;height: 38px;" alt="JobHere"></a>
                 </div>
             </div>
             <div class="col-sm-6 col-lg-9">
