--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -341,31 +341,31 @@
     </div>
     <!-- End of Job Post Area -->
     <!--Start of Fun Factor Area-->
-    <div class="fun-factor-area bg-1 text-center ptb-100 pt-sm-60 pb-sm-30">
+    <div class="fun-factor-area bg-6 text-center ptb-100 pt-sm-60 pb-sm-30">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1><span class="counter">340</span> +</h1>
-                        <h3>Customers</h3>
+                        <h1 style="color: black"><span class="counter">340</span> +</h1>
+                        <h3  style="color: black">Customers</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1><span class="counter">450</span> +</h1>
-                        <h3>members</h3>
+                        <h1  style="color: red"><span class="counter">450</span> +</h1>
+                        <h3  style="color: red">members</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1><span class="counter">220</span></h1>
-                        <h3>Resume</h3>
+                        <h1  style="color: black"><span class="counter">220</span></h1>
+                        <h3 style="color: black">Resume</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1><span class="counter">299</span></h1>
-                        <h3>Company</h3>
+                        <h1 style="color: blue"><span class="counter">299</span></h1>
+                        <h3 style="color: blue">Company</h3>
                     </div>
                 </div>
             </div>
@@ -421,7 +421,7 @@
     </div>
     <!-- Working Aera End -->
     <!--Testimonial Area Start-->
-    <div class="testimonial-area bg-2 text-center fix ptb-100 ptb-sm-60">
+    <div class="testimonial-area bg-7 text-center fix ptb-100 ptb-sm-60">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 ml-auto mr-auto">
