--- a/public/css/shortcode/default.css
+++ b/public/css/shortcode/default.css
@@ -1228,13 +1228,23 @@ textarea:focus {
 .bg-1 { background: url(../../img/hand.jpg);}
 .bg-2 { background: url(../../img/hand.jpg);}
 .bg-3 {
-  background: rgba(0, 0, 0, 0) url("../../images/bg/3.jpg") no-repeat scroll center top / cover ;
+  background: rgba(0, 0, 0, 0) url("../../img/setting.jpg") 51% 69% ;
 }
 .bg-4 { background: url(../../images/bg/4.jpg);}
 .bg-5 {
-  background: rgba(0, 0, 0, 0) url("../../img/slider1.jpg") repeat scroll 0 0 / cover ;
+  background: rgba(0, 0, 0, 0) url("../../img/success.jpg") repeat scroll 0 0 / cover ;
 }
-	
+.bg-6 {
+    background: rgba(0, 0, 0, 0) url("../../img/things.jpg") repeat scroll 0 0 / cover ;
+}
+
+.bg-7 {
+    background: rgba(0, 0, 0, 0) url("../../img/handshake.jpg") repeat scroll 0 0 / cover ;
+}
+
+.bg-8 {
+    background: rgba(0, 0, 0, 0) url("../../img/setting.jpg") repeat scroll 0 0 / cover ;
+}
 /*pattern background*/
 .pattern-bg { 
 	background:url(../../images/pattern/pattern-bg.png) repeat; background-position: top right; background-color: rgba(236, 239, 247, 1); 
